--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,6 @@
     <string name="Favorite">Favorite</string>
     <string name="Chat">Chat</string>
     <string name="Profile">Profile</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="recommendation">Recommendation</string>
 </resources>
