--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,7 @@
     <string name="profile_updated">Updated Succeed!</string>
     <string name="feature_in_development_stage">Feature in development stage</string>
     <string name="menu_is_not_found">Menu is not found</string>
+    <string name="confirm_logout">Are you sure to logout?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
